--- a/231206.0/en/0.md
+++ b/231206.0/en/0.md
@@ -1,28 +1,4 @@
-Welcome to the official documentation on the programming language RTS!
 
-<h2 align="center">Introduction</h2>
+# 231206.0 en
 
-RTS uses its own reactive programming paradigm of Free Data Structures. 
-This differs from classical approaches such as procedural, object-oriented, 
-functional and other types of programming. The main feature is that 
-the programmer is given the freedom to write any data structures, 
-their reactive interaction and trouble-free operation. 
-
-RTS negates the concept of errors, there is only unexpected behavior. 
-Thus, the code directly depends on the goals, imagination and skill of 
-the programmer.
-
-The goals and objectives of RTS:
-
-* Rapid Deployment: Simplified setup and project launch;
-* Global Repository: Centralized management of dependencies and packages;
-* Interpretation: Ability to execute code on the fly, speeding up project development;
-* Multitasking: Running multiple projects simultaneously;
-* Machine Code: Direct execution on the processor for maximum performance;
-* Flexible Data Management: Unrestricted structures allow working with data without strict limitations;
-* Reactivity: Automatic processing of changes.
-
-Thus, RTS is ideal for tasks that require rapid deployment, support for 
-running multiple projects simultaneously, high performance, and reliability. 
-It automates processes in systems with dynamic changes, while also providing 
-freedom for further development.
+Introduction
